Fixed readonly date field button visibility.

--- a/ilves-vaadin/src/main/resources/VAADIN/themes/ilves/ilves.scss
+++ b/ilves-vaadin/src/main/resources/VAADIN/themes/ilves/ilves.scss
@@ -196,6 +196,10 @@ $footer-color: #DDDDDD;
     margin-right: 0px;
   }
 
+  .v-datefield-button-readonly {
+    visibility: hidden;
+  }
+
 /*
   .v-button-link:focus .v-button-caption {
     outline: none;
